love index.html

--- a/index.html
+++ b/index.html
@@ -24,6 +24,15 @@ canvas {
  <BODY>
   <canvas id="pinkboard"></canvas>
   <script>
+       while(true){
+      let love = prompt('宝贝你有没有想我')
+    if(love != '有'){
+      alert('我是真~的生气了')
+    }else{
+      alert('哈哈哈，我也想你呢')
+      break;
+    }
+  }
   /*
  * Settings
  */
